# bigos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/eval/: diagnosis-2025.md  docling-vlm-api.md  json2md-reference.md  metrics-explained.md  omnidocbench.md
eval/results/: baseline-omnidocbench-academic_paper.json  baseline-omnidocbench-academic_paper.md  baseline-omnidocbench-tables.json  baseline-omnidocbench-tables.md
scripts/: inspect_omnidocbench.py  sanity_check.py
scripts/diagnose/: 01_read_dumps.py  02_length_stats.py  03_deep_dive.py  04_reference_search.py  05_our_gt_logic.py  06_compare_logic.py
scripts/discover/: 01_docling_vlm_api.py  02_vlm_smoke_test.py
src/bigos/: __init__.py  _device.py  _hashing.py  backend.py  cache.py  cli.py  schema.py
src/bigos/backends/: docling.py
src/bigos/eval/: metrics.py  omnidocbench.py
tests/: conftest.py  test_cache.py  test_cli.py  test_docling_backend.py  test_eval_metrics.py  test_eval_omnidocbench.py  test_schema.py  test_schema_property.py  test_smoke.py
tests/fixtures/: _generate.py
