[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigos"
version = "0.0.1.dev0"
description = "High-level data ingestion library for RAG pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "hypothesis>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bigos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/bigos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/bigos"]
