[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigos"
version = "0.0.1.dev0"
description = "High-level data ingestion library for RAG pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.13",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0",
]
cache = [
    "diskcache>=5.6",
]
eval = [
    "datasets>=3.0",
    "huggingface-hub>=0.20",
    "jiwer>=3.0",
    "rapidfuzz>=3.0",
    "apted>=1.0.3",
    "pillow>=11.0",
]

[project.scripts]
bigos = "bigos.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "hypothesis>=6.0",
    "reportlab>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bigos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/bigos"]

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "docling_core.*",
    "diskcache.*",
    "apted.*",
    "rapidfuzz.*",
    "huggingface_hub.*",
    "datasets.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (model download/inference)",
]

[tool.coverage.run]
source = ["src/bigos"]
